# avi-git-integration

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  requirements.txt  ruff.toml
.astro/: config.yaml
.devcontainer/: devcontainer.json
dags/: Multi_consumer_dag.py  Multi_producer_dag.py  ask_astro_dy_task_map.py  dag_metadata.yaml  dag_template.py  defer_http.py  dummy_child_dag.py  dummy_parent_dag.py  dump_conn_var.py  example_hibernation_astro.py  expose.py  generator-factory.py  kpo_side.py  try_context_eg.py
dags/Kubernetes/: kpo_side.py
dags/Maintenance/: cleanup_dag.py  example_hibernation_astro.py
dags/MulticronDag/: multi-cron-timetable-usage-examples.py
dags/dbt/: steps.md
dags/dbt/.dbt/: profiles.yaml
dags/dbt/my_simple_dbt_project/: dbt_project.yml
dags/dbt/my_simple_dbt_project/models/: description.yaml
inactive_plugins/my_airflow_plugin/policies/: __init__.py
plugins/dag_dir_view/: plugin.py  pyproject.toml
plugins/dag_dir_view/templates/: dag_dir_view.html
plugins/maintenance_mode_plugin/: __init__.py  maintenance_mode_plugin.py  plugin.py  policy.py  pyproject.toml
plugins/maintenance_mode_plugin/templates/: base_override.html  maintenance_mode_form.html
plugins/multicron_timetable/: __init__.py  timetable.py
plugins/pause_running_dags/: __init__.py  plugin.py  pyproject.toml
plugins/pause_running_dags/templates/: pause_running_dags.html
plugins/rbac_plugin/: __init__.py  pyproject.toml
plugins/rbac_plugin/policies/: __init__.py
